<resources>
    <string name="app_name">TerraNode</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">FULL NAME</string>
    <string name="welcome">Welcome!</string>
    <string name="itn_group_is_a_commercial_platform_that_is_engaged_in_the_formation_and_production_of_products_in_the_field_of_trading">ITN Group is a commercial platform that is engaged in the formation and production of products in the field of trading</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="create">Create</string>
    <string name="sponsor_id">SPONSOR ID</string>
    <string name="sign_in">Sign in</string>
    <string name="new_here_create_an_account">New here? Create an account</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="office">Office</string>
    <string name="products">Products</string>
    <string name="news">News</string>
    <string name="support">Support</string>
    <string name="log_out">log out</string>
    <string name="your_sponsor">Your sponsor</string>
    <string name="partner_wallet">Partner wallet</string>
    <string name="nod_wallet">Nod wallet</string>
    <string name="cash_wallet">Cash wallet</string>
    <string name="transfer_wallet">Transfer wallet</string>

    <string name="string_with_string_to_textview">%s %s</string>
    <string name="dollar_with_string_to_textview">$%s</string>
    <string name="view_more">View More</string>
    <string name="correspondence">Your correspondence</string>
    <string name="structure">Your structure</string>
    <string name="you">You</string>
    <string name="p_office">Personal Office</string>
</resources>
